--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,22 @@
-pom.xml
-pom.xml.asc
-*.jar
-*.class
-/lib/
-/classes/
-/target/
-/checkouts/
+*.iml
+*.swp
+*out
+*~
+.DS_Store
+.cljs*
+.idea/
+.lein*
 .lein-deps-sum
-.lein-repl-history
 .lein-plugins/
-.lein-failures
+.lein-repl-history
 .nrepl-port
-.cpcache/
+.nrepl-repl-history
+.rebel_readline_history
+.repl*
+/.DS_Store
+/classes
+/cljs-out
+/lib
+/out
+/pom.xml
+/target/
