--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "1.0.0",
   "license": "MIT",
   "dependencies": {
+    "highlight.js": "9.15.10",
+    "react-highlight.js": "1.0.7",
     "rot-js": "^2.1.1"
   },
   "devDependencies": {
-    "shadow-cljs": "^2.8.58",
     "create-react-class": "^15.6.3",
     "d3": "^5.8.0",
     "install": "^0.13.0",
@@ -15,6 +16,7 @@
     "react-grid-layout": "^0.16.6",
     "react-icons": "^2.2.7",
     "reakit": "^0.11.1",
-    "semantic-ui-react": "^0.88.1"
+    "semantic-ui-react": "^0.88.1",
+    "shadow-cljs": "^2.8.58"
   }
 }
